homework1/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /health/
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path:  /otusapp/marina/(.*)
            backend:
              serviceName: myapp-service
              servicePort: 9000
    - host: arch.homework
      http:
        paths:
          - path: /health
            backend:
              serviceName: myapp-service
              servicePort: 9000
